chapter3/y.output
State 1 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: expr

    2 expr: STRING
    3     | INT
    4     | NIL
    5     | lvalue
    6     | MINUS expr
    7     | expr PLUS expr
    8     | expr MINUS expr
    9     | expr TIMES expr
   10     | expr DIVIDE expr
   11     | expr OR expr
   12     | expr AND expr
   13     | expr EQ expr
   14     | expr NEQ expr
   15     | expr LT expr
   16     | expr LE expr
   17     | expr GT expr
   18     | expr GE expr
   19     | lvalue ASSIGN expr
   20     | ID LPAREN exprList RPAREN
   21     | ID LPAREN RPAREN
   22     | LPAREN exprSeq RPAREN
   23     | LPAREN RPAREN
   24     | ID LBRACE fieldList RBRACE
   25     | ID LBRACE RBRACE
   26     | ID LBRACK expr RBRACK OF expr
   27     | IF expr THEN expr
   28     | IF expr THEN expr ELSE expr
   29     | WHILE expr DO expr
   30     | FOR ID ASSIGN expr TO expr DO expr
   31     | BREAK
   32     | LET declList IN exprSeq END
   33     | LET declList IN END

   34 exprSeq: expr
   35        | expr SEMICOLON exprSeq

   36 exprList: expr
   37         | expr COMMA exprList

   38 fieldList: ID EQ expr
   39          | ID EQ expr COMMA fieldList

   40 lvalue: ID
   41       | lvalue LBRACK expr RBRACK
   42       | ID LBRACK expr RBRACK
   43       | lvalue DOT ID

   44 declList: decl
   45         | decl declList

   46 decl: typeDeclList
   47     | varDecl
   48     | funcDeclLiet

   49 typeDeclList: typeDecl
   50             | typeDecl typeDeclList

   51 typeDecl: TYPE ID EQ type

   52 type: ID
   53     | LBRACE typeFields RBRACE
   54     | LBRACE RBRACE
   55     | ARRAY OF ID

   56 typeFields: ID COLON ID
   57           | ID COLON ID COMMA typeFields

   58 varDecl: VAR ID ASSIGN expr
   59        | VAR ID COLON ID ASSIGN expr

   60 funcDeclLiet: funcDecl
   61             | funcDecl funcDeclLiet

   62 funcDecl: FUNCTION ID LPAREN typeFields RPAREN EQ expr
   63         | FUNCTION ID LPAREN RPAREN EQ expr
   64         | FUNCTION ID LPAREN typeFields RPAREN COLON ID EQ expr
   65         | FUNCTION ID LPAREN RPAREN COLON ID EQ expr


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 20 21 24 25 26 30 38 39 40 42 43 51 52 55 56 57 58 59 62 63
    64 65
STRING (259) 2
INT (260) 3
COMMA (261) 37 39 57
COLON (262) 56 57 59 64 65
SEMICOLON (263) 35
LPAREN (264) 20 21 22 23 62 63 64 65
RPAREN (265) 20 21 22 23 62 63 64 65
LBRACK (266) 26 41 42
RBRACK (267) 26 41 42
LBRACE (268) 24 25 53 54
RBRACE (269) 24 25 53 54
DOT (270) 43
PLUS (271) 7
MINUS (272) 6 8
TIMES (273) 9
DIVIDE (274) 10
EQ (275) 13 38 39 51 62 63 64 65
NEQ (276) 14
LT (277) 15
LE (278) 16
GT (279) 17
GE (280) 18
AND (281) 12
OR (282) 11
ASSIGN (283) 19 30 58 59
ARRAY (284) 55
IF (285) 27 28
THEN (286) 27 28
ELSE (287) 28
WHILE (288) 29
FOR (289) 30
TO (290) 30
DO (291) 29 30
LET (292) 32 33
IN (293) 32 33
END (294) 32 33
OF (295) 26 55
BREAK (296) 31
NIL (297) 4
FUNCTION (298) 62 63 64 65
VAR (299) 58 59
TYPE (300) 51
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
expr (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29 30 31 32 33, on right: 1 6 7 8 9 10 11 12
    13 14 15 16 17 18 19 26 27 28 29 30 34 35 36 37 38 39 41 42 58
    59 62 63 64 65
exprSeq (50)
    on left: 34 35, on right: 22 32 35
exprList (51)
    on left: 36 37, on right: 20 37
fieldList (52)
    on left: 38 39, on right: 24 39
lvalue (53)
    on left: 40 41 42 43, on right: 5 19 41 43
declList (54)
    on left: 44 45, on right: 32 33 45
decl (55)
    on left: 46 47 48, on right: 44 45
typeDeclList (56)
    on left: 49 50, on right: 46 50
typeDecl (57)
    on left: 51, on right: 49 50
type (58)
    on left: 52 53 54 55, on right: 51
typeFields (59)
    on left: 56 57, on right: 53 57 62 64
varDecl (60)
    on left: 58 59, on right: 47
funcDeclLiet (61)
    on left: 60 61, on right: 48 61
funcDecl (62)
    on left: 62 63 64 65, on right: 60 61


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program  go to state 12
    expr     go to state 13
    lvalue   go to state 14


state 1

   20 expr: ID . LPAREN exprList RPAREN
   21     | ID . LPAREN RPAREN
   24     | ID . LBRACE fieldList RBRACE
   25     | ID . LBRACE RBRACE
   26     | ID . LBRACK expr RBRACK OF expr
   40 lvalue: ID .
   42       | ID . LBRACK expr RBRACK

    LPAREN  shift, and go to state 15
    LBRACK  shift, and go to state 16
    LBRACE  shift, and go to state 17

    LBRACK    [reduce using rule 40 (lvalue)]
    $default  reduce using rule 40 (lvalue)


state 2

    2 expr: STRING .

    $default  reduce using rule 2 (expr)


state 3

    3 expr: INT .

    $default  reduce using rule 3 (expr)


state 4

   22 expr: LPAREN . exprSeq RPAREN
   23     | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 18
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr     go to state 19
    exprSeq  go to state 20
    lvalue   go to state 14


state 5

    6 expr: MINUS . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 21
    lvalue  go to state 14


state 6

   27 expr: IF . expr THEN expr
   28     | IF . expr THEN expr ELSE expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 22
    lvalue  go to state 14


state 7

   29 expr: WHILE . expr DO expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 23
    lvalue  go to state 14


state 8

   30 expr: FOR . ID ASSIGN expr TO expr DO expr

    ID  shift, and go to state 24


state 9

   32 expr: LET . declList IN exprSeq END
   33     | LET . declList IN END

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    declList      go to state 28
    decl          go to state 29
    typeDeclList  go to state 30
    typeDecl      go to state 31
    varDecl       go to state 32
    funcDeclLiet  go to state 33
    funcDecl      go to state 34


state 10

   31 expr: BREAK .

    $default  reduce using rule 31 (expr)


state 11

    4 expr: NIL .

    $default  reduce using rule 4 (expr)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 35


state 13

    1 program: expr .
    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 1 (program)


state 14

    5 expr: lvalue .
   19     | lvalue . ASSIGN expr
   41 lvalue: lvalue . LBRACK expr RBRACK
   43       | lvalue . DOT ID

    LBRACK  shift, and go to state 48
    DOT     shift, and go to state 49
    ASSIGN  shift, and go to state 50

    $default  reduce using rule 5 (expr)


state 15

   20 expr: ID LPAREN . exprList RPAREN
   21     | ID LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 51
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr      go to state 52
    exprList  go to state 53
    lvalue    go to state 14


state 16

   26 expr: ID LBRACK . expr RBRACK OF expr
   42 lvalue: ID LBRACK . expr RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 54
    lvalue  go to state 14


state 17

   24 expr: ID LBRACE . fieldList RBRACE
   25     | ID LBRACE . RBRACE

    ID      shift, and go to state 55
    RBRACE  shift, and go to state 56

    fieldList  go to state 57


state 18

   23 expr: LPAREN RPAREN .

    $default  reduce using rule 23 (expr)


state 19

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr
   34 exprSeq: expr .
   35        | expr . SEMICOLON exprSeq

    SEMICOLON  shift, and go to state 58
    PLUS       shift, and go to state 36
    MINUS      shift, and go to state 37
    TIMES      shift, and go to state 38
    DIVIDE     shift, and go to state 39
    EQ         shift, and go to state 40
    NEQ        shift, and go to state 41
    LT         shift, and go to state 42
    LE         shift, and go to state 43
    GT         shift, and go to state 44
    GE         shift, and go to state 45
    AND        shift, and go to state 46
    OR         shift, and go to state 47

    $default  reduce using rule 34 (exprSeq)


state 20

   22 expr: LPAREN exprSeq . RPAREN

    RPAREN  shift, and go to state 59


state 21

    6 expr: MINUS expr .
    7     | expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    $default  reduce using rule 6 (expr)


state 22

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr
   27     | IF expr . THEN expr
   28     | IF expr . THEN expr ELSE expr

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    THEN    shift, and go to state 60


state 23

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr
   29     | WHILE expr . DO expr

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47
    DO      shift, and go to state 61


state 24

   30 expr: FOR ID . ASSIGN expr TO expr DO expr

    ASSIGN  shift, and go to state 62


state 25

   62 funcDecl: FUNCTION . ID LPAREN typeFields RPAREN EQ expr
   63         | FUNCTION . ID LPAREN RPAREN EQ expr
   64         | FUNCTION . ID LPAREN typeFields RPAREN COLON ID EQ expr
   65         | FUNCTION . ID LPAREN RPAREN COLON ID EQ expr

    ID  shift, and go to state 63


state 26

   58 varDecl: VAR . ID ASSIGN expr
   59        | VAR . ID COLON ID ASSIGN expr

    ID  shift, and go to state 64


state 27

   51 typeDecl: TYPE . ID EQ type

    ID  shift, and go to state 65


state 28

   32 expr: LET declList . IN exprSeq END
   33     | LET declList . IN END

    IN  shift, and go to state 66


state 29

   44 declList: decl .
   45         | decl . declList

    FUNCTION  shift, and go to state 25
    VAR       shift, and go to state 26
    TYPE      shift, and go to state 27

    $default  reduce using rule 44 (declList)

    declList      go to state 67
    decl          go to state 29
    typeDeclList  go to state 30
    typeDecl      go to state 31
    varDecl       go to state 32
    funcDeclLiet  go to state 33
    funcDecl      go to state 34


state 30

   46 decl: typeDeclList .

    $default  reduce using rule 46 (decl)


state 31

   49 typeDeclList: typeDecl .
   50             | typeDecl . typeDeclList

    TYPE  shift, and go to state 27

    TYPE      [reduce using rule 49 (typeDeclList)]
    $default  reduce using rule 49 (typeDeclList)

    typeDeclList  go to state 68
    typeDecl      go to state 31


state 32

   47 decl: varDecl .

    $default  reduce using rule 47 (decl)


state 33

   48 decl: funcDeclLiet .

    $default  reduce using rule 48 (decl)


state 34

   60 funcDeclLiet: funcDecl .
   61             | funcDecl . funcDeclLiet

    FUNCTION  shift, and go to state 25

    FUNCTION  [reduce using rule 60 (funcDeclLiet)]
    $default  reduce using rule 60 (funcDeclLiet)

    funcDeclLiet  go to state 69
    funcDecl      go to state 34


state 35

    0 $accept: program $end .

    $default  accept


state 36

    7 expr: expr PLUS . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 70
    lvalue  go to state 14


state 37

    8 expr: expr MINUS . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 71
    lvalue  go to state 14


state 38

    9 expr: expr TIMES . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 72
    lvalue  go to state 14


state 39

   10 expr: expr DIVIDE . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 73
    lvalue  go to state 14


state 40

   13 expr: expr EQ . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 74
    lvalue  go to state 14


state 41

   14 expr: expr NEQ . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 75
    lvalue  go to state 14


state 42

   15 expr: expr LT . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 76
    lvalue  go to state 14


state 43

   16 expr: expr LE . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 77
    lvalue  go to state 14


state 44

   17 expr: expr GT . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 78
    lvalue  go to state 14


state 45

   18 expr: expr GE . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 79
    lvalue  go to state 14


state 46

   12 expr: expr AND . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 80
    lvalue  go to state 14


state 47

   11 expr: expr OR . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 81
    lvalue  go to state 14


state 48

   41 lvalue: lvalue LBRACK . expr RBRACK

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 82
    lvalue  go to state 14


state 49

   43 lvalue: lvalue DOT . ID

    ID  shift, and go to state 83


state 50

   19 expr: lvalue ASSIGN . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 84
    lvalue  go to state 14


state 51

   21 expr: ID LPAREN RPAREN .

    $default  reduce using rule 21 (expr)


state 52

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr
   36 exprList: expr .
   37         | expr . COMMA exprList

    COMMA   shift, and go to state 85
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47

    $default  reduce using rule 36 (exprList)


state 53

   20 expr: ID LPAREN exprList . RPAREN

    RPAREN  shift, and go to state 86


state 54

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr
   26     | ID LBRACK expr . RBRACK OF expr
   42 lvalue: ID LBRACK expr . RBRACK

    RBRACK  shift, and go to state 87
    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39
    EQ      shift, and go to state 40
    NEQ     shift, and go to state 41
    LT      shift, and go to state 42
    LE      shift, and go to state 43
    GT      shift, and go to state 44
    GE      shift, and go to state 45
    AND     shift, and go to state 46
    OR      shift, and go to state 47


state 55

   38 fieldList: ID . EQ expr
   39          | ID . EQ expr COMMA fieldList

    EQ  shift, and go to state 88


state 56

   25 expr: ID LBRACE RBRACE .

    $default  reduce using rule 25 (expr)


state 57

   24 expr: ID LBRACE fieldList . RBRACE

    RBRACE  shift, and go to state 89


state 58

   35 exprSeq: expr SEMICOLON . exprSeq

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr     go to state 19
    exprSeq  go to state 90
    lvalue   go to state 14


state 59

   22 expr: LPAREN exprSeq RPAREN .

    $default  reduce using rule 22 (expr)


state 60

   27 expr: IF expr THEN . expr
   28     | IF expr THEN . expr ELSE expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 91
    lvalue  go to state 14


state 61

   29 expr: WHILE expr DO . expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 92
    lvalue  go to state 14


state 62

   30 expr: FOR ID ASSIGN . expr TO expr DO expr

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr    go to state 93
    lvalue  go to state 14


state 63

   62 funcDecl: FUNCTION ID . LPAREN typeFields RPAREN EQ expr
   63         | FUNCTION ID . LPAREN RPAREN EQ expr
   64         | FUNCTION ID . LPAREN typeFields RPAREN COLON ID EQ expr
   65         | FUNCTION ID . LPAREN RPAREN COLON ID EQ expr

    LPAREN  shift, and go to state 94


state 64

   58 varDecl: VAR ID . ASSIGN expr
   59        | VAR ID . COLON ID ASSIGN expr

    COLON   shift, and go to state 95
    ASSIGN  shift, and go to state 96


state 65

   51 typeDecl: TYPE ID . EQ type

    EQ  shift, and go to state 97


state 66

   32 expr: LET declList IN . exprSeq END
   33     | LET declList IN . END

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    END     shift, and go to state 98
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    expr     go to state 19
    exprSeq  go to state 99
    lvalue   go to state 14


state 67

   45 declList: decl declList .

    $default  reduce using rule 45 (declList)


state 68

   50 typeDeclList: typeDecl typeDeclList .

    $default  reduce using rule 50 (typeDeclList)


state 69

   61 funcDeclLiet: funcDecl funcDeclLiet .

    $default  reduce using rule 61 (funcDeclLiet)


state 70

    7 expr: expr . PLUS expr
    7     | expr PLUS expr .
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    $default  reduce using rule 7 (expr)


state 71

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    8     | expr MINUS expr .
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    $default  reduce using rule 8 (expr)


state 72

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
    9     | expr TIMES expr .
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    $default  reduce using rule 9 (expr)


state 73

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   10     | expr DIVIDE expr .
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    $default  reduce using rule 10 (expr)


state 74

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   13     | expr EQ expr .
   14     | expr . NEQ expr
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 13 (expr)


state 75

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   14     | expr NEQ expr .
   15     | expr . LT expr
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr

    PLUS    shift, and go to state 36
    MINUS   shift, and go to state 37
    TIMES   shift, and go to state 38
    DIVIDE  shift, and go to state 39

    EQ   error (nonassociative)
    NEQ  error (nonassociative)
    LT   error (nonassociative)
    LE   error (nonassociative)
    GT   error (nonassociative)
    GE   error (nonassociative)

    $default  reduce using rule 14 (expr)


state 76

    7 expr: expr . PLUS expr
    8     | expr . MINUS expr
    9     | expr . TIMES expr
   10     | expr . DIVIDE expr
   11     | expr . OR expr
   12     | expr . AND expr
   13     | expr . EQ expr
   14     | expr . NEQ expr
   15     | expr . LT expr
   15     | expr LT expr .
   16     | expr . LE expr
   17     | expr . GT expr
   18     | expr . GE expr
